<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.netxms.nxmc</groupId>
  <artifactId>netxms-eclipse</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>Branding</module>
    <module>Product</module>
    <module>../../src/java-common</module>
    <module>../../src/client/java</module>
    <module>ActionManager</module>
    <module>AgentManager</module>
    <module>AlarmViewer</module>
    <module>Charts</module>
    <module>Core</module>
    <module>Dashboard</module>
    <module>DataCollection</module>
    <module>EPP</module>
    <module>EventManager</module>
    <module>FileManager</module>
    <module>ImageLibrary</module>
    <module>Logger</module>
    <module>LogViewer</module>
    <module>NXSL</module>
    <module>NetworkMaps</module>
    <module>OSM</module>
    <module>ObjectBrowser</module>
    <module>ObjectBrowser.AdapterFactory</module>
    <module>ObjectManager</module>
    <module>ObjectTools</module>
    <module>ObjectView</module>
    <module>PerfView</module>
    <module>Reporter</module>
    <module>SLM</module>
    <module>SNMP</module>
    <module>ServerConfig</module>
    <module>ServerJobManager</module>
    <module>ServiceView</module>
    <module>SwitchManager</module>
    <module>Topology</module>
    <module>UserManager</module>
    <module>swtchart</module>
  </modules>

    <properties>
        <tycho.version>1.4.0</tycho.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
	    <tycho.groupid>org.eclipse.tycho</tycho.groupid>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <war.filename>nxmc</war.filename>
        <assembly.version>2.4</assembly.version>
        <replacer.version>1.4.1</replacer.version>
    </properties>

    <repositories>     
        <repository>
          <id>orbit latest</id>
          <layout>p2</layout>
          <url>http://download.eclipse.org/tools/orbit/downloads/drops/R20170919201930/repository/</url>
        </repository>
        <repository>
            <id>Babel Language Pack</id>
            <url>http://archive.eclipse.org/technology/babel/update-site/R0.17.1/2019-12</url>
            <layout>p2</layout>
        </repository> 
        <repository>
            <id>eclipse</id>
            <url>http://download.eclipse.org/releases/2019-06</url>
            <layout>p2</layout>
        </repository>
        <repository>  
            <id>rap-3.12</id>
            <url>http://download.eclipse.org/rt/rap/3.12</url>
            <layout>p2</layout>
        </repository>   
        <repository>
            <id>zest</id>
            <url>http://www.netxms.org/eclipse/zest-rap</url>
            <layout>p2</layout>
        </repository> 
        <repository>
            <id>warProducts</id>
            <url>http://download.eclipse.org/libra/releases</url>
            <layout>p2</layout>
        </repository> 
    </repositories> 

  <build>
    <plugins>
    <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-versions-plugin</artifactId>
        <version>${tycho.version}</version>
        <executions>
            <execution>
                <id>versions</id>
                <phase>validate</phase>
                <goals>
                    <goal>update-pom</goal>
                </goals>
            </execution>
        </executions>
        </plugin>

      <plugin>
        <groupId>${tycho.groupid}</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>

     <plugin>
        <groupId>${tycho.groupid}</groupId>
        <artifactId>tycho-compiler-plugin</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>${tycho.groupid}</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho.version}</version>
        <configuration>
         <filters>
            <!-- example 3: work around Equinox bug 348045 -->
            <filter>
               <type>p2-installable-unit</type>
               <id>org.eclipse.equinox.servletbridge.extensionbundle</id>
               <removeAll />
            </filter>
         </filters>
       </configuration>
      </plugin> 

    </plugins>
  </build>
</project>
